# python-objdictgen

./: .gitignore  README.md  noxfile.py  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
.github/workflows/: publish.yml  python-package.yml  python-publish.yml  validate.yml
packaging/: filereplacer.py  objdictedit.spec  objdictedit.ver.in
src/objdictgen/: __init__.py  __main__.py  eds_utils.py  gen_cfile.py  gen_cppfile.py  jsonod.py  maps.py  node.py  nodelist.py  nodemanager.py  nosis.py  printing.py  typing.py  utils.py
src/objdictgen/schema/: od.schema.json
src/objdictgen/ui/: commondialogs.py  exception.py  networkedit.py  networkeditortemplate.py  nodeeditortemplate.py  objdictedit.py  subindextable.py
tests/: conftest.py  test_imports.py  test_jsonod.py  test_knownfailures.py  test_main.py  test_node.py  test_nodelist.py  test_nodemanager.py  test_nosis.py  test_objdictgen.py  test_odcompare.py  test_odg.py  test_printing.py  test_utils.py
tests/od/: README.md  domain.json  domain.od  generate_json.py  jsonod-comments.json  legacy-domain.od  legacy-master.od  legacy-slave.od  legacy-strings.od  profile-ds302-ds401.json  profile-ds302-ds401.od  slave-ds302.json  slave-ds302.od  slave-emcy.json  slave-emcy.od  slave-heartbeat.json  slave-heartbeat.od  slave-nodeguarding.json  slave-nodeguarding.od  slave-sync.json  slave-sync.od  strings.json  unicode.json  unicode.od
tests/test_generators/: bad_generator.py  generator.py
